--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,1 @@
-server.port=6677
-logging.config=classpath:log/log-back.xml
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=1234
-spring.datasource.url=jdbc:mysql://localhost:3306/tools
+spring.profiles.active=dev
